--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="find">FIND</string>
     <string name="info">info</string>
     <string name="find_country">Find country</string>
+    <string name="find_state">Find state</string>
 </resources>
